--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,21 @@
 zuul.routes.etilang.url=http://localhost:9090
 
 ribbon.eureka.enabled=false
-
 server.port=1212
+
+jwt.header=Authorization
+jwt.secret=mySecret
+jwt.expiration=604800
+jwt.route.authentication.path=auth
+jwt.route.authentication.refresh=refresh
+
+#Database
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/db-barang
+spring.datasource.username=postgres
+spring.datasource.password=123
+spring.datasource.platform=postgresql
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
