--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ jwt.route.authentication.refresh=refresh
 
 #Database
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/db-barang
+spring.datasource.url=jdbc:postgresql://localhost:5432/e-tilang
 spring.datasource.username=postgres
 spring.datasource.password=123
 spring.datasource.platform=postgresql
